--- a/config/config.toml.template
+++ b/config/config.toml.template
@@ -33,6 +33,9 @@ positive_feedback_ttl = 0
 # The time-to-live (days) of items, 0 means disabled. The default value is 0.
 item_ttl = 0
 
+# The labels for item categories.
+item_categories = ["spoken_language_code:zh"]
+
 # This section declares settings for the master node.
 [master]
 port = 8086                     # master port
