--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -65,14 +65,19 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           
-      - uses: olegtarasov/get-tag@v2.1
-        id: tag_name
-          
-      - name: Build docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          file: docker/${{ matrix.image }}/Dockerfile
-          push: true
-          tags: zhenghaoz/${{ matrix.image }}:${{ steps.tag_name.outputs.tag }}
+      - id: get_version
+        uses: battila7/get-version-action@v2
+        
+      - run: echo ${{ steps.get_version.outputs.major }}.${{ steps.get_version.outputs.minor }}
+      - run: echo ${{ steps.get_version.outputs.version-without-v }}
+
+#       - name: Build docker image
+#         uses: docker/build-push-action@v2
+#         with:
+#           context: .
+#           platforms: linux/amd64,linux/arm64
+#           file: docker/${{ matrix.image }}/Dockerfile
+#           push: true
+#           tags: |
+#             zhenghaoz/${{ matrix.image }}:latest
+#             zhenghaoz/${{ matrix.image }}:${{ steps.tag_name.outputs.tag }}
