--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -59,25 +59,23 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
         
-#       - name: Login to DockerHub
-#         uses: docker/login-action@v1 
-#         with:
-#           username: ${{ secrets.DOCKERHUB_USERNAME }}
-#           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
           
       - id: get_version
         uses: battila7/get-version-action@v2
-        
-      - run: echo ${{ steps.get_version.outputs.major }}.${{ steps.get_version.outputs.minor }}
-      - run: echo ${{ steps.get_version.outputs.version-without-v }}
 
-#       - name: Build docker image
-#         uses: docker/build-push-action@v2
-#         with:
-#           context: .
-#           platforms: linux/amd64,linux/arm64
-#           file: docker/${{ matrix.image }}/Dockerfile
-#           push: true
-#           tags: |
-#             zhenghaoz/${{ matrix.image }}:latest
-#             zhenghaoz/${{ matrix.image }}:${{ steps.tag_name.outputs.tag }}
+      - name: Build docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          file: docker/${{ matrix.image }}/Dockerfile
+          push: true
+          tags: |
+            zhenghaoz/${{ matrix.image }}:latest
+            zhenghaoz/${{ matrix.image }}:${{ steps.get_version.outputs.major }}.${{ steps.get_version.outputs.minor }}
+            zhenghaoz/${{ matrix.image }}:${{ steps.get_version.outputs.version-without-v }}
