--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -65,9 +65,9 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           
-      - uses: olegtarasov/get-tag@v2.1
-        id: tag_name
-          
+      - id: get_version
+        uses: battila7/get-version-action@v2
+
       - name: Build docker image
         uses: docker/build-push-action@v2
         with:
@@ -75,4 +75,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           file: docker/${{ matrix.image }}/Dockerfile
           push: true
-          tags: zhenghaoz/${{ matrix.image }}:${{ steps.tag_name.outputs.tag }}
+          tags: |
+            zhenghaoz/${{ matrix.image }}:latest
+            zhenghaoz/${{ matrix.image }}:${{ steps.get_version.outputs.major }}.${{ steps.get_version.outputs.minor }}
+            zhenghaoz/${{ matrix.image }}:${{ steps.get_version.outputs.version-without-v }}
