match items by HNSW (#368)

--- a/config/config.toml.template
+++ b/config/config.toml.template
@@ -13,7 +13,7 @@ cache_store = "redis://localhost:6379/0"
 data_store = "mysql://gorse:gorse_pass@tcp(localhost:3306)/gorse?parseTime=true"
 
 # The cache size for recommended/popular/latest items. The default value is 100.
-cache_size = 200
+cache_size = 100
 
 # Insert new users while inserting feedback. The default value is true.
 auto_insert_user = true
@@ -126,6 +126,15 @@ enable_item_based_recommend = false
 
 # Enable collaborative filtering recommendation during offline recommendation. The default values is true.
 enable_collaborative_recommend = true
+
+# Enable approximate collaborative filtering recommend using vector index.
+enable_collaborative_index = false
+
+# Minimal recall for approximate collaborative filtering recommend.
+collaborative_index_recall = 0.9
+
+# Maximal number of fit epochs for approximate collaborative filtering recommend vector index.
+collaborative_index_fit_epoch = 3
 
 # Enable click-though rate prediction during offline recommendation. Otherwise, results from multi-way recommendation
 # would be merged randomly. The default values is true.
