--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     restart: unless-stopped
     ports:
       - 6379:6379
+
   mysql:
     image: mysql/mysql-server
     restart: unless-stopped
@@ -16,7 +17,8 @@ services:
       MYSQL_USER: gorse
       MYSQL_PASSWORD: gorse_pass
     volumes:
-      - ./var/lib/mysql:/var/lib/mysql
+      - mysql_data:/var/lib/mysql
+
   worker:
     image: zhenghaoz/gorse-worker
     restart: unless-stopped
@@ -26,8 +28,11 @@ services:
       --master-host master --master-port 8086 --http-host 0.0.0.0 --http-port 8089
       --log-path /var/log/gorse/worker.log --cache-path /var/lib/gorse/worker_cache.data
     volumes:
-      - ./var/log/gorse:/var/log/gorse
-      - ./var/lib/gorse:/var/lib/gorse
+      - gorse_log:/var/log/gorse
+      - worker_data:/var/lib/gorse
+    depends_on:
+      - master
+
   server:
     image: zhenghaoz/gorse-server
     restart: unless-stopped
@@ -37,8 +42,11 @@ services:
       --master-host master --master-port 8086 --http-host 0.0.0.0 --http-port 8087
       --log-path /var/log/gorse/server.log --cache-path /var/lib/gorse/server_cache.data
     volumes:
-      - ./var/log/gorse:/var/log/gorse
-      - ./var/lib/gorse:/var/lib/gorse
+      - gorse_log:/var/log/gorse
+      - server_data:/var/lib/gorse
+    depends_on:
+      - master
+
   master:
     image: zhenghaoz/gorse-master
     restart: unless-stopped
@@ -48,5 +56,15 @@ services:
     command: -c /etc/gorse/config.toml --log-path /var/log/gorse/master.log --cache-path /var/lib/gorse/master_cache.data
     volumes:
       - ./config.toml:/etc/gorse/config.toml
-      - ./var/log/gorse:/var/log/gorse
-      - ./var/lib/gorse:/var/lib/gorse
+      - gorse_log:/var/log/gorse
+      - master_data:/var/lib/gorse
+    depends_on:
+      - redis
+      - mysql
+
+volumes:
+  mysql_data:
+  worker_data:
+  server_data:
+  master_data:
+  gorse_log:
