use epsilon_time

--- a/config/config.toml.template
+++ b/config/config.toml.template
@@ -49,6 +49,7 @@ dashboard_password = "password" # dashboard password
 [server]
 default_n = 10                  # default number of returned items
 api_key = ""                    # secret key for RESTful APIs (SSL required)
+epsilon_time = 5                # clock error in the cluster in seconds
 
 # This section declares settings for recommendation.
 [recommend]
