--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -4,13 +4,13 @@ on: release
 
 jobs:
   build-binaries:
-    name: Build Binaries
+    name: build binaries
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.17.x
+      - name: Set up Go 1.18.x
         uses: actions/setup-go@v2
         with:
-          go-version: 1.17.x
+          go-version: 1.18.x
         id: go
         
       - name: Pull source
@@ -47,7 +47,7 @@ jobs:
           file_glob: true
 
   build-docker-images:
-    name: "Build Docker Images"
+    name: build docker images
     runs-on: ubuntu-latest
     strategy:
       matrix:
