--- a/.github/workflows/translate_issues.yml
+++ b/.github/workflows/translate_issues.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   translate-isssues:
-    name: Translate Issues
+    name: translate issues
     runs-on: ubuntu-latest
     steps:
       - name: Issues Translator
