--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -188,3 +188,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
+        with:
+          args: --timeout 20m
