--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - mysql_data:/var/lib/mysql
 
   worker:
-    image: zhenghaoz/gorse-worker:nightly
+    image: zhenghaoz/gorse-worker
     restart: unless-stopped
     ports:
       - 8089:8089
@@ -36,7 +36,7 @@ services:
       - master
 
   server:
-    image: zhenghaoz/gorse-server:nightly
+    image: zhenghaoz/gorse-server
     restart: unless-stopped
     ports:
       - 8087:8087
@@ -55,7 +55,7 @@ services:
       - master
 
   master:
-    image: zhenghaoz/gorse-master:nightly
+    image: zhenghaoz/gorse-master
     restart: unless-stopped
     ports:
       - 8086:8086
